# Employee_Management_Portal

./: .gitignore  docker-compose.yaml
WebAPI/: .gitignore  WebAPI.sln
WebClient/: .eslintrc.js  (+8 more)
server/store/: .env  .gitignore  Cargo.toml  Dockerfile  HELP.md  pom.xml
server/store/migrations/: 20230826184032_init.down.sql
server/store/scripts/: content.sql
server/store/src/: main.rs
server/store/src/main/java/com/ecommerce/store/config/: DatabaseConfig.java
server/store/src/main/java/com/ecommerce/store/controller/: ProductController.java
server/store/src/main/java/com/ecommerce/store/dao/: ProductRepository.java
server/store/src/main/java/com/ecommerce/store/domain/dto/: Response.java
server/store/src/main/java/com/ecommerce/store/entity/: Product.java
server/store/src/main/java/com/ecommerce/store/repository/: ProductRepository.java
server/store/src/main/java/com/github/store/: StoreApplication.java
server/store/src/main/java/com/github/store/config/: DatabaseConfig.java  SecureConfig.java  SecurityAuthFilter.java
server/store/src/main/java/com/github/store/controller/: StoreController.java
server/store/src/main/resources/: Makefile  application.properties  application.yaml
server/store/src/main/resources/db/migration/: 000001_init.up.sql
server/store/src/main/resources/db/script/: content.sql
server/store/src/model/: product.rs
server/store/src/router/: controller.rs  mod.rs
server/store/src/test/java/com/ecommerce/store/: ProductControllerTests.java
server/store/src/test/java/com/github/ecommerce/: WebApiApplicationTests.java
(+957 files in other folders)
