[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-service = "2.0.1"
async-trait = "0.1.24"
dotenv = "0.15.0"
fern = "0.6.0"
futures = "0.3.4"
chrono = "0.4.26"
log = "0.4"
mime = "0.3.17"
mongodb = "2.6.1"
pin-project = "1.1.3"
redis = { version = "0.23.2", feature = ["tokio-comp", "connection-manager"] }
serde = "1.0.130"
serde_json = "1.0"
thiserror = "1.0.47"
tokio = "1.32.0"
tokio-stream = "0.1.14"